[package]
name = "rexe"
version = "0.7.0"
authors = ["Marc Dergacz <marc@skytix.com.au>"]

[dependencies]
base64 = "0.7.0"
clap = "2.30.0"
ctrlc = { version = "3.0", features = ["termination"] }
env_logger = "0.4.3"
hyper = "0.11"
log = "0.3.8"
regex = "0.2"
rand = "0.3"
reqwest = "0.8.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
terminal_size = "0.1.7"
